src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__assigning_to_rvalue.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E050]: Expression is not assignable
  ┌─ <internal>:9:18
  │
9 │             func(1 := 1);
  │                  ^^^^^^ Expression is not assignable


